POST+CSS+tweaks

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">courseWizUi</a>
+            <a class="navbar-brand" href="#/">RPI Course Wizard</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -42,7 +42,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <!--<li><a ng-href="#/">Contact</a></li>-->
             </ul>
           </div>
         </div>
