Final Commit (before morning)

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/schedule">Schedule</a></li>
               <li><a ng-href="#/about">About</a></li>
+              <li><a ng-href="#/main" ng-click="logout()">Logout</a></li>
               <!--<li><a ng-href="#/">Contact</a></li>-->
             </ul>
           </div>
